--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - uses: sfdx-actions/setup-pmd@v1
-      - name: run-pmd
+      - name: run-pmd 
+        uses: sfdx-actions/setup-pmd@v1
       - run: |
           pmd -dir . -format text -rulesets ${{env.PMD_RULESET_FILE}} -reportfile ${{env.PMD_RESULTS_FILE}} -failOnViolation false -no-cache
           if [ -s "${{env.PMD_RESULTS_FILE}}" ] # if the size of the file is more than 0 then...
