--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      #- uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      # RUN PMD
       - uses: sfdx-actions/setup-pmd@v1 
       - name: run-pmd 
         run: pmd -d ./force-app/main/default/classes -R ./pmd-apex-ruleset.xml -f text
