--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,13 @@ jobs:
       - uses: actions/checkout@v2
       
       # NPM / NODE
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '12' 
-      - run: npm ci
+      #- uses: actions/setup-node@v2
+      #  with:
+      #    node-version: '12' 
+      #- run: npm ci
         
       # RUN PMD
-      - uses: legetz/setup-pmd@v6.30
+      - uses: sfdx-actions/setup-pmd@v1
       - name: run-pmd 
         run: pmd -language apex -d . -R pmd-apex-ruleset.xml -f text
 
