--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       # RUN PMD
       - uses: sfdx-actions/setup-pmd@v1
       - name: run-pmd 
-        run: pmd -language apex -d . -R pmd-apex-ruleset.xml -f text
+        run: pmd -language apex -d . -R pmd-apex-ruleset.xml -f text --failOnViolation false
 
       # Install Salesforce CLI
       - name: Install Salesforce CLI
