--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,16 @@ jobs:
       # RUN PMD
       - uses: sfdx-actions/setup-pmd@v1
       - name: run-pmd 
-        run: pmd -language apex -d . -R pmd-apex-ruleset.xml -f text --failOnViolation false
+      #  run: pmd -language apex -d . -R pmd-apex-ruleset.xml -f text --failOnViolation false
+      - run: |
+          pmd -language apex -d . -f text -R pmd-apex-ruleset.xml -r pmd.xml --failOnViolation false -no-cache
+          if [ -s "pmd.xml" ] # if the size of the file is more than 0 then...
+          then
+            cat pmd.xml
+            numberOfViolations=$(grep "" -c pmd.xml) # counting number of lines, as the result file has error per line
+            echo "Apex code analysis found $numberOfViolations violations" 
+            exit 0 # Make it exit 1 when we want this to fail the build
+          fi
 
       # Install Salesforce CLI
       - name: Install Salesforce CLI
