--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
       #- run: npm ci
         
       # RUN PMD ~ pmd -language apex -d . -R pmd-apex-ruleset.xml -f text --failOnViolation false
-      - uses: sfdx-actions/setup-pmd@v1
       - name: run-pmd
+        uses: sfdx-actions/setup-pmd@v1
       - run: |
           pmd -language apex -d . -f text -R pmd-apex-ruleset.xml -r pmd.xml --failOnViolation false -no-cache
           if [ -s "pmd.xml" ] # if the size of the file is more than 0 then...
