--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,9 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                   node-version: "12"
-            - run: npm ci
+            - run: |
+                  echo "${GITHUB_WORKSPACE}/node_modules/.bin" >> $GITHUB_PATH
+                  npm ci
 
             # RUN PMD ~ pmd -language apex -d . -R pmd-apex-ruleset.xml -f text --failOnViolation false
             - name: run-pmd
