--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,14 @@ jobs:
               run: |
                   echo "${{ secrets.SERVER_KEY }}" > "server.key"
                   sfdx force:auth:jwt:grant -i ${{ secrets.CONSUMER_KEY }} -f server.key -u ${{ secrets.USERNAME }} -d -a hub-org
+
+            # Build Scratch Org
+            - name: Run org_builder
+              uses: actions/setup-python@v2
+              with:
+                  python-version: "3.8"
+            - run: python org_builder.py -a sfdx-example -d 1 -v hub-org --debug
+
+            # Run tests
+            - name: Run Tests
+              run: sfdx force:apex:test:run -r human -w 5 -l RunLocalTests --codecoverage
