--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,12 @@ jobs:
     # This workflow contains a single job called "build"
     build:
         # The type of runner that the job will run on
-        runs-on: ubuntu-18.04
+        runs-on: ubuntu-latest
 
         # Steps represent a sequence of tasks that will be executed as part of the job
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
 
             # RUN PMD ~ pmd -language apex -d . -R pmd-apex-ruleset.xml -f text --failOnViolation false
             - name: Run PMD
@@ -33,9 +33,9 @@ jobs:
 
             # Install Node
             - name: Install Node
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
-                  node-version: "14"
+                  node-version: "18"
             - run: |
                   echo "${GITHUB_WORKSPACE}/node_modules/.bin" >> $GITHUB_PATH
                   npm ci
@@ -55,9 +55,11 @@ jobs:
 
             # Build Scratch Org
             - name: Run org_builder
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v3
               with:
-                  python-version: "3.8"
+                  python-version: "3.10"
+                  cache: 'pip'
+            - run: pip install -r requirements.txt
             - run: python org_builder.py -a sfdx-example -d 1 -v hub-org --debug
 
             # Run tests
