--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,4 +64,4 @@ jobs:
 
             # Run tests
             - name: Run Tests
-              run: sfdx force:apex:test:run -r human -w 5 -l RunLocalTests --codecoverage
+              run: sfdx apex:run:test -r human -w 5 -l RunLocalTests -c -v
