--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,30 @@
 {
-  "recommendations": [
-    "salesforce.salesforcedx-vscode",
-    "redhat.vscode-xml",
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode"
-  ]
+	"recommendations": [
+		"salesforce.salesforcedx-vscode",
+		"redhat.vscode-xml",
+		"dbaeumer.vscode-eslint",
+		"esbenp.prettier-vscode",
+		"salesforce.salesforcedx-vscode-apex",
+		"salesforce.salesforcedx-vscode-apex-debugger",
+		"financialforce.lana",
+		"chuckjonas.apex-pmd",
+		"salesforce.salesforcedx-vscode-apex-replay-debugger",
+		"salesforce.salesforcedx-vscode-lightning",
+		"aaron-bond.better-comments",
+		"usernamehw.errorlens",
+		"visualstudioexptteam.vscodeintellicode",
+		"visualstudioexptteam.intellicode-api-usage-examples",
+		"ms-python.isort",
+		"salesforce.salesforcedx-vscode-lwc",
+		"ms-python.vscode-pylance",
+		"njqdev.vscode-python-typehint",
+		"mechatroner.rainbow-csv",
+		"salesforce.salesforcedx-vscode-core",
+		"hugoom.sfdx-autoheader",
+		"salesforce.salesforce-vscode-slds",
+		"salesforce.salesforcedx-vscode-soql",
+		"salesforce.salesforcedx-vscode-visualforce",
+		"ms-python.black-formatter",
+		"ms-python.flake8"
+	]
 }
