--- a/package.json
+++ b/package.json
@@ -13,24 +13,23 @@
 		"test:unit:debug": "sfdx-lwc-jest --debug",
 		"test:unit:coverage": "sfdx-lwc-jest --coverage",
 		"prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-		"prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\""
+		"prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+		"precommit": "lint-staged"
 	},
 	"devDependencies": {
-		"@prettier/plugin-xml": "^0.12.0",
-		"@salesforce/eslint-config-lwc": "^0.7.0",
-		"@salesforce/eslint-plugin-aura": "^1.4.0",
-		"@salesforce/sfdx-lwc-jest": "^0.10.2",
-		"eslint": "^7.6.0",
-		"eslint-config-prettier": "^6.11.0",
-		"husky": "^4.2.1",
-		"lint-staged": "^10.0.7",
-		"prettier": "^2.0.5",
-		"prettier-plugin-apex": "^1.6.0"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "npx lint-staged"
-		}
+		"@lwc/eslint-plugin-lwc": "^1.1.2",
+		"@prettier/plugin-xml": "^2.0.1",
+		"@salesforce/eslint-config-lwc": "^3.2.3",
+		"@salesforce/eslint-plugin-aura": "^2.0.0",
+		"@salesforce/eslint-plugin-lightning": "^1.0.0",
+		"@salesforce/sfdx-lwc-jest": "^1.1.0",
+		"eslint": "^8.11.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^26.1.2",
+		"husky": "^7.0.4",
+		"lint-staged": "^12.3.7",
+		"prettier": "^2.6.0",
+		"prettier-plugin-apex": "^1.10.0"
 	},
 	"lint-staged": {
 		"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
