--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,6 @@ jobs:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - uses: actions/checkout@v3
 
-            # RUN PMD ~ pmd -language apex -d . -R pmd-apex-ruleset.xml -f text --failOnViolation false
-            - name: Run PMD
-              uses: sfdx-actions/setup-pmd@v1
-            - run: pmd -language apex -d . -R ${{ env.PMD_RULESET_FILE }} -f text -min 1 -no-cache
-            - run: pmd -language apex -d . -R ${{ env.PMD_RULESET_FILE }} -f text --failOnViolation false -min 3 -no-cache
-
             # Install Node
             - name: Install Node
               uses: actions/setup-node@v3
@@ -52,8 +46,7 @@ jobs:
               run: |
                   npm install -g @salesforce/cli
                   echo "${GITHUB_WORKSPACE}/node_modules/.bin" >> $GITHUB_PATH
-                  sfdx --version
-                  sfdx plugins --core
+                  sf --version
 
             # Install SFDX Scanner
             - name: Install SFDX Scanner
@@ -61,13 +54,13 @@ jobs:
 
             # sf code scanner
             - name: run sf scanner
-              run: sf scanner:run --target force-app -f table
+              run: sf scanner:run --target force-app -f table -s 2 --normalize-severity
 
             # Authorise devhub
             - name: Autenticate DevHub
               run: |
                   echo "${{ secrets.SERVER_KEY }}" > "server.key"
-                  sfdx force:auth:jwt:grant -i ${{ secrets.CONSUMER_KEY }} -f server.key -u ${{ secrets.USERNAME }} -d -a hub-org
+                  sf org login jwt -i ${{ secrets.CONSUMER_KEY }} -f server.key -o ${{ secrets.USERNAME }} -d -a hub-org
 
             # Build Scratch Org
             - name: Run org_builder
@@ -80,4 +73,4 @@ jobs:
 
             # Run tests
             - name: Run Tests
-              run: sfdx apex:run:test -r human -w 5 -l RunLocalTests -c -v
+              run: sf apex run test -r human -w 5 -l RunLocalTests -c -v
